Make msg-file to publish separate msg in x,y,z,intensity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,29 +7,46 @@ project(access_pointcloud)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   sensor_msgs
+  std_msgs
+  message_generation
 )
 
+
+add_message_files(
+  FILES
+  PointXyzi.msg
+)
+
+generate_messages(
+ DEPENDENCIES
+ std_msgs
+)
 
 ###################################
 ## catkin specific configuration ##
 ###################################
 
 catkin_package(
-              )
+  CATKIN_DEPENDS message_runtime
+)
 
 ###########
 ## Build ##
 ###########
 
+
 include_directories(${catkin_INCLUDE_DIRS} 
                    )
 
- add_executable(access_pointcloud 
+add_executable(access_pointcloud 
                 src/access_pointcloud.cpp
                )
 
- target_link_libraries(access_pointcloud
+target_link_libraries(access_pointcloud
                        ${catkin_LIBRARIES}
                       )
 
-
+add_dependencies(access_pointcloud
+                 ${catkin_EXPORTED_TARGETS}
+                )
+ 
